# ncmpclone

./: CMakeLists.txt  README.md  command.c  command.h  command_player.c  command_player.h  list.c  list.h  list_menu.c  list_menu.h  list_window.c  list_window.h  main.c  mpd_info.c  mpd_info.h  ncmpclone_ncurses.c  ncmpclone_ncurses.h  playlist.c  playlist.h  queue_list.c  queue_list.h  queue_window.c  queue_window.h  screen_browse.c  screen_browse.h  screen_help.c  screen_help.h  screen_queue.c  screen_queue.h  status_bar.c  status_bar.h  title_bar.c  title_bar.h
